fix(coverPage): hide body overflow to remove scrolling
fix Safari behavior to add scrolling because of absolute positioned, overflowing element

--- a/docs/index.mobile.css
+++ b/docs/index.mobile.css
@@ -361,6 +361,11 @@
 
 @media (min-width: 1024px) {
 
+  .kentan-theme body.cover-page {
+    /* fixes scrolling because of absolute positioned background poster on Safari */
+    overflow: hidden;
+  }
+
   .kentan-theme .background-poster {
     height: 113.4vh;
   }
